test/sc++/error/forall-mesh-unknown.scpp
../../scc/error/forall-mesh-unknown.sc